syntax = "proto3";

package saflib.auth.v1;

import "envelope.proto";
import "google/protobuf/timestamp.proto";

service Users {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}

message GetUserProfileRequest {
  saflib.common.v1.SafAuth auth = 1;
  saflib.common.v1.SafRequest request = 2;
  string user_id = 3;
}

message GetUserProfileResponse {
  UserProfile profile = 3;
}

message UserProfile {
  string user_id = 1;
  string email = 2;
  bool email_verified = 3;
  string name = 4;
  string given_name = 5;
  string family_name = 6;
  google.protobuf.Timestamp created_at = 7;
}